# STEMotion

./: CMakeLists.txt  Findepoxy.cmake  main.cpp
LibSTEMotion/: CMakeLists.txt
LibSTEMotion/include/LibSTEMotion/: STEMotion.h  SimulationOutput.h  SimulationParams.h  plugin.h
LibSTEMotion/include/LibSTEMotion/metrics/: Angle.h  BaseQuantity.h  Distance.h  Energy.h  Force.h  Mass.h  Time.h  Velocity.h  metrics.h
LibSTEMotion/include/LibSTEMotion/renderer/: DrawQueue.h  Object.h
LibSTEMotion/include/LibSTEMotion/renderer/objects/: Object.h
LibSTEMotion/include/LibSTEMotion/utils/: numsize.h
LibSTEMotion/src/metrics/: Angle.cpp  BaseQuantity.cpp  Distance.cpp  Energy.cpp  Force.cpp  Mass.cpp  Time.cpp  Velocity.cpp
LibSTEMotion/src/renderer/: DrawQueue.cpp
LibSTEMotion/src/simulation/: SimulationOutput.cpp  SimulationParams.cpp
gui/: MainWindow.cpp  MainWindow.h  SimulationWindow.cpp  SimulationWindow.h
gui/simulation_window/: ParametersView.cpp  ParametersView.h  PredictionsView.cpp  PredictionsView.h  SimulationView.cpp  SimulationView.h
metrics/: BaseQuantity.cpp  BaseQuantity.h  Distance.cpp  Distance.h  Energy.cpp  Energy.h  Force.cpp  Force.h  Time.cpp  Velocity.cpp  Velocity.h  metrics.h
plugin/: SimulationPlugin.cpp  SimulationPlugin.h
plugin/platform/: PlatformInterface.h  unix.cpp  windows.cpp
renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
renderer/font/: font_bold.h  font_italic.h  font_regular.h
renderer/objects/: Circle.cpp  Circle.h  Object.cpp  Object.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  circle.cpp  line.cpp  object.h  rectangle.cpp  triangle.cpp
renderer/shaders/: fragment.frag  vertex.vert
renderer/typeface/: Typeface.cpp  Typeface.h
utils/: numsize.h
